--- a/FunBug/en.lproj/MainStoryboard.storyboard
+++ b/FunBug/en.lproj/MainStoryboard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2840" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1926"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -51,6 +51,22 @@
                                     <action selector="setSettings:" destination="2" eventType="touchUpInside" id="NLw-Gj-0aT"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="2AI-Lw-SU5">
+                                <rect key="frame" x="20" y="404" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Button" image="1262b33239f1cb04e6279691783aa155.jpg">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="restart" destination="2" eventType="touchUpInside" id="VSH-n5-lZW"/>
+                                    <action selector="viewWillAppear:" destination="2" eventType="touchUpInside" id="zuM-Cz-x53"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -71,6 +87,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="1262b33239f1cb04e6279691783aa155.jpg" width="128" height="128"/>
         <image name="bug.png" width="90" height="95"/>
         <image name="door_bottom.png" width="320" height="235"/>
         <image name="door_top.png" width="320" height="266"/>
@@ -79,6 +96,21 @@
         <image name="plate_cheese.png" width="320" height="480"/>
         <image name="setting.png" width="40" height="39"/>
     </resources>
+    <classes>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="restart"/>
+                <relationship kind="action" name="setSettings:"/>
+                <relationship kind="outlet" name="bug" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="doorBottom" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="doorTop" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="plate" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="tissueButtom" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="tissueTop" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
